--- a/AssignTwoTimDelaney/app/src/main/res/menu/menu_lin_expl_intent.xml
+++ b/AssignTwoTimDelaney/app/src/main/res/menu/menu_lin_expl_intent.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/arrow_back"
+        android:icon="@drawable/ic_arrow_back_white_24dp"
+        android:title="@string/arrow_back"/>
 
+    <item android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"/>
 </menu>
+
+
+
+
